refactor: 三阶段全面优化 - 安全修复、代码重构、性能提升
Phase 1 - 安全与稳定性修复:
- 移除所有业务Controller的@Anonymous注解，启用JWT认证
- CORS改为环境变量控制(CORS_ALLOWED_ORIGINS)
- 修复RuntimeException异常信息泄露
- TgHelper静态初始化改为懒加载
- StrmServiceImpl/CopyServiceImpl添加TransactionTemplate事务保护
- OpenlistConfig恢复5个数据库配置读取
- downloadFile添加SSRF防护
- XSS过滤扩展到/api/*
- 废弃旧版NotifyController
- 修复多处空日志消息

Phase 2 - 代码重构:
- CategoryRule消除反射，直接调用MediaInfo getter(-42行)
- NfoGenerator 839行->90行，策略模式拆分为7个文件
- TMDbClient.fetchDetails 131行->38行，消除TV/Movie重复
- MediaRenameProcessor.handleFileIfReady拆分为5个步骤方法
- 创建BaseCrudRestController泛型基类，3个Controller继承重构
- RenameDetailRestController拆分出ScrapeRestController
- 创建HttpClientConfig共享OkHttpClient连接池
- getMinFileSizeBytes统一至OpenlistConfig

Phase 3 - 性能优化:
- 添加4个数据库复合索引(幂等SQL脚本)
- STRM生成使用Java 25虚拟线程并行化(Semaphore并发控制)
- TMDb API缓存(24h TTL)+指数退避重试+速率限制
- 增量文件同步(基于lastSyncTime)
- 前端防抖composable + 4个页面共享逻辑抽取
- 新SQL脚本注册到MysqlDdl